feat: add build

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "test-vk-app",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
+  "repository": "git@github.com:avdeev/test-vk-app.git",
+  "author": "",
+  "license": "MIT",
   "scripts": {
     "start": "cross-env PORT=10888 react-scripts start",
     "build": "react-scripts build"
   },
   "keywords": [],
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "cross-env": "^5.2.1",
     "react-hot-loader": "^4.12.19",
@@ -25,5 +26,17 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
